# diac-btc

./: .gitignore  README.md  eval.py  inference.py  prep_data.py  pyproject.toml  requirements.txt  text_processing_utils.py  wer.py
notebooks/: analyze_transcripts.ipynb  inference.ipynb  test.ipynb
notebooks/samples/: female_ab_00000.txt
scripts/: eval.sh
scripts/nemo/: README.md  nemo_prep_manifest.py  nemo_speech_to_text_ctc.py  prep_manifest.py  run.sh  speech_to_text_ctc.py  speech_to_text_ctc_bpe.py  split_train_val.py
scripts/nemo/conf/: conformer_ctc_char-unfreeze.yaml  conformer_ctc_char.yaml  fast-conformer_ctc_bpe.yaml  fast-conformer_ctc_char.yaml  speech_to_text_finetune.yaml
src/diac_btc/: config.py  text.py
src/diac_btc/models/: __init__.py  base.py  diac_model.py  wav2vec2.py
src/diac_btc/models/nemo/: __init__.py  convert_to_ctc.py  inference.py  model.py  speech_to_text_ctc.py
src/diac_btc/models/nemo/conf/: speech_to_text_finetune.yaml
src/diac_btc/models/wav2vec2/: model.py  prep_data.py  train.py
